--- a/tasks/expand_archive_windows.yml
+++ b/tasks/expand_archive_windows.yml
@@ -48,7 +48,7 @@
 
 - name: "{{ archive.filename }}: Perform a HEAD on the remote file to read sha256"  # noqa: name[template]
   ansible.windows.win_uri:
-    url: "{{ proget_api_url }}/{{ repo }}/content/{{ filepath | regex_replace('^/') }}"
+    url: "{{ proget_api_url }}/{{ repo }}/metadata/{{ filepath | regex_replace('^/') }}"
     method: GET
     timeout: 60
     return_content: true
