--- a/tasks/Darwin.yml
+++ b/tasks/Darwin.yml
@@ -41,6 +41,23 @@
     PATH: "/opt/homebrew/bin:/usr/local/bin:{{ ansible_env.PATH }}"
   changed_when: false
 
+- name: sign pgutil so Gatekeeper allows it
+  become: true
+  ansible.builtin.command: /usr/bin/codesign --force --sign - "{{ pgutil_path.stdout }}"
+  when: pgutil_path.stdout | length > 0
+
+- name: Verify spctl sees a signature on pgutil
+  ansible.builtin.command: /usr/sbin/spctl -a -vv "{{ pgutil_path.stdout }}"
+  register: spctl_check
+  changed_when: false
+  failed_when: false
+  when: pgutil_path.stdout | length > 0
+
+- name: Debug spctl output
+  debug:
+    var: spctl_check.stdout_lines
+  when: spctl_check is defined
+
 - name: Add PGutil source
   ansible.builtin.command: "{{ pgutil_path.stdout }} sources add --name={{ pgutil_source_name }} --url={{ proget_base_url }} --api-key={{ ansible_deployment_proget_key }}"
   environment:
